# rbx-upload

./: README.md  index.html  pyproject.toml  rbx_upload.html  search.js
.github/workflows/: docs.yml  test.yml
src/rbx_upload/: __init__.py  cli.py  client.py  models.py
tests/: test_client.py
tests/fixtures/: shirt.xml
