[project]
name = "rbx-upload"
version = "0.2.0"
description = "Roblox asset upload client"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
]
license = "MIT"

[project.optional-dependencies]
cli = ["click>=8.0"]

[project.scripts]
rbx-upload = "rbx_upload.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rbx_upload"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
